--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -2,8 +2,7 @@
 mysql {
   dest = ${?MYSQL_HOST}
   user = ${?MYSQL_USERNAME}
-  //  password = null
-  //  password = ${?MYSQL_PASSWORD}
+  password = ${?MYSQL_PASSWORD}
   database = ${?TEST_MYSQL_DATABASE}
   pool {
     watermark {
