--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
-export MYSQL_URL="jdbc:mysql://192.168.99.100:3306/backend_scala_app?useSSL=false"
-export TEST_MYSQL_URL="jdbc:mysql://192.168.99.100:3306/backend_scala_app_test?useSSL=false"
-export MYSQL_HOST=192.168.99.100:3306
-export MYSQL_USERNAME=dev
-export MYSQL_PASSWORD=123456
+export MYSQL_URL="jdbc:mysql://localhost:3306/backend_scala_app?useSSL=false"
+export TEST_MYSQL_URL="jdbc:mysql://localhost:3306/backend_scala_app_test?useSSL=false"
+export MYSQL_HOST=localhost:3306
+export MYSQL_USERNAME=root
+#export MYSQL_PASSWORD=123456
 export MYSQL_DATABASE=backend_scala_app
 export TEST_MYSQL_DATABASE=backend_scala_app_test
